[gd_scene load_steps=7 format=2]

[ext_resource path="res://Robot.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/hp_earth_ground_height_dark_256.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Powerup.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Bomb.tscn" type="PackedScene" id=6]

[node name="Main" type="Node"]
script = ExtResource( 3 )
Powerup = ExtResource( 4 )
Bomb = ExtResource( 6 )
battery = 100.0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.87451, 0.87451, 0.87451, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -360.0
margin_right = 240.0
margin_bottom = 360.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Robot" parent="." instance=ExtResource( 1 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 350 )

[node name="BatteryTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="PowerupContainer" type="Node" parent="."]

[node name="PowerupTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="BombTimer" type="Timer" parent="."]
one_shot = true

[node name="BombContainer" type="Node" parent="."]
[connection signal="pickup" from="Robot" to="." method="_on_Robot_pickup"]
[connection signal="timeout" from="BatteryTimer" to="." method="_on_BatteryTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
